# bleconfd

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  appSettings.cc  appSettings.h  beacon.cc  beacon.h  beacon.sh  bleconfd.ini  bleconfd.json  blepacket.cc  blepacket.h  defs.h  devices_db  ecdh.cc  ecdh.h  env.sh  gattServer.cc  gattServer.h  getmac.sh  jsonRpc.cc  jsonRpc.h  jsonrpc.cc  jsonrpc.h  logger.cc  logger.h  main.cc  memory_stream.h  rpclogger.cc  rpclogger.h  rpcserver.cc  rpcserver.h  util.cc  util.h  wpaControl.cc  wpaControl.h  wpacontrol.cc  xLog.cc  (+1 more)
AndroidClientApp/app/: build.gradle
AndroidClientApp/app/src/main/: AndroidManifest.xml
RDKDeviceConfigurator_Android/: settings.gradle
RDKDeviceConfigurator_Android/app/: build.gradle
RDKDeviceConfigurator_Android/app/src/main/: AndroidManifest.xml
RDKDeviceConfigurator_Android/gradle/wrapper/: gradle-wrapper.properties
bluez/: beacon.cc  beacon.h  bleclass.cc  bleclass.h  gattServer.cc  gattServer.h
iOSClientApp/: .gitignore  Podfile  README.md  VALIDATION.md
iOSClientApp/UIComponents/: RoundedButton.swift  UIComponents.h  UIExtensions.swift
iOSClientApp/iOSClientApp/: AppDelegate.swift  Configuration.plist  Info.plist
iOSClientApp/iOSClientApp.xcodeproj/: project.pbxproj
iOSClientApp/iOSClientApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOSClientApp/iOSClientApp.xcworkspace/: contents.xcworkspacedata
iOSClientApp/iOSClientApp/Assets.xcassets/arrow_down_black.imageset/: Contents.json
iOSClientApp/iOSClientApp/Assets.xcassets/icon_delete.imageset/: Contents.json
iOSClientApp/iOSClientApp/Assets.xcassets/icon_edit.imageset/: Contents.json
iOSClientApp/iOSClientApp/BLE/: BLEAPI.swift  BLEService.swift
iOSClientApp/iOSClientApp/Common/: AutoSizedTable.swift  Configuration.swift  LoadingView.swift  Logger.swift  Storyboards.swift  TableViewModel.swift
iOSClientApp/iOSClientApp/Model/: INIGroup.swift  INIValue.swift  InboxPacket.swift  Result.swift
iOSClientApp/iOSClientApp/Util/: NSExtensions.swift  RxExtensions.swift  RxReuseBag.swift  UIExtensions.swift
iOSClientApp/iOSClientApp/ViewControllers/: ContainerViewController.swift  HomeViewController.swift  IniEditorViewController.swift  LogViewController.swift  WiFiViewController.swift
iOSClientApp/iOSClientApp/ViewControllers/Popovers/: BasePopoverViewController.swift  INIGroupPopoverViewController.swift  INIValuePopoverViewController.swift  WiFiPopoverViewController.swift
iOSClientApp/iOSClientApp/XIB/: Home.storyboard  INI.storyboard  Log.storyboard  WiFi.storyboard
iOSClientApp/iOSClientApp/XIB/Base.lproj/: Main.storyboard
qtclient/: .gitignore  Makefile  README  bletest.pro  bluetoothapplication.cpp  bluetoothapplication.h  main.cpp  restart.sh
services/: appsettings.cc  appsettings.h  netservice.cc  netservice.h  shellservice.cc  shellservice.h  wifiservice.cc  wifiservice.h
tests/: cmd-exec.json  config-get-keys.json  config-get.json
webui/: bleconfd.html
(+47 files in other folders)
